force-app/main/default/objects/FEC_Customer_Segmentation__c/FEC_Customer_Segmentation__c.object-meta.xml
<CustomObject>
    <label>Customer Segmentation</label>
    <nameField>
        <label>Account/Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Segmentations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>