force-app/main/default/objects/FEC_Customer_Segmentation__c/fields/FEC_CIF_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_CIF_Number__c</fullName>
    <description>Trường mã số CIF của khách hàng</description>
    <label>CIF Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>