force-app/main/default/objects/FEC_Customer_Segmentation__c/fields/FEC_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Segment__c</fullName>
    <description>Trường thông tin hiển thị phân khúc khách hàng, vd: VIP</description>
    <label>Customer Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>