force-app/main/default/objects/FEC_Customer_Segmentation__c/fields/FEC_Survey_Points__c.field-meta.xml
<CustomField>
    <fullName>FEC_Survey_Points__c</fullName>
    <label>Survey Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>